tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/ErrorReportingTests#suite().mjava
	public static Test suite() {
		TestSuite suite = new TestSuite(ErrorReportingTests.class.getName());
		// $JUnit-BEGIN$
		suite.addTest(PHP5ErrorReportingTests.suite());
		suite.addTest(PHP53ErrorReportingTests.suite());
		// $JUnit-END$
		return suite;
	}

